# packaging-tutorial

./: README.md  pyproject.toml
src/example_package_ridha_mm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
