[project]
name = "example_package_ridha_mm"
version = "0.0.1"
authors = [
  { name="Ridha", email="ridhafathima273@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ridha-mm/packaging-tutorial"
Issues = "https://github.com/ridha-mm/packaging-tutorial/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"